<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/surati2"
    android:orientation="horizontal"
    tools:context=".ui.authorization.LogInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/select_photo_log"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="4dp"
                android:layout_gravity="center"
                android:src="@mipmap/logo2"
                android:background="@drawable/orange_round_background"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Welcome to WriteSpace!"
                android:textSize="14sp"
                android:layout_margin="15dp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="#D2A87E"/>


            <EditText
                android:id="@+id/logEmailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/auth_background1"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:textColorHint="#48000000"
                android:lines="1"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="#FC915F5C"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/logPasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/auth_background2"
                android:textColor="#FC915F5C"
                android:textColorHint="#48000000"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:lines="1"
                android:textStyle="bold"
                android:padding="10dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_password"
                android:textSize="13sp" />

            <Button
                android:id="@+id/logInButton"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/log_in"
                android:background="@drawable/auth_background3"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp">

            </Button>

            <LinearLayout
                android:id="@+id/accountField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/don_t_have_an_account"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/signUpTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3dp"
                    android:text="@string/sign_up"
                    android:textColor="#EC99AA9A"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</FrameLayout>