<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/surati2"
    android:orientation="vertical"
    tools:context=".ui.authorization.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/photo_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/select_photo_reg"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_person_orange_80dp"
                    android:background="@drawable/white_round_background"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/setImageButton"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:background="@drawable/white_round_background"
                    android:textColor="#FC915F5C"
                    android:textSize="15sp"
                    android:text="+" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/firstNameEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:background="@drawable/auth_background1"
                    android:hint=" Enter first name"
                    android:lines="1"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:textColor="#FC915F5C"
                    android:textColorHint="#48000000"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/lastNameEditText"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/auth_background2"
                    android:hint=" Enter last name"
                    android:textStyle="bold"
                    android:lines="1"
                    android:padding="10dp"
                    android:textColor="#FC915F5C"
                    android:textColorHint="#48000000"
                    android:textSize="15sp" />


            </LinearLayout>

            <EditText
                android:id="@+id/regEmailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/auth_background1"
                android:hint=" Enter your email"
                android:textStyle="bold"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:padding="10dp"
                android:textColor="#FC915F5C"
                android:textColorHint="#48000000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/regPasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/auth_background2"
                android:hint=" Enter your password"
                android:inputType="textPassword"
                android:textStyle="bold"
                android:lines="1"
                android:padding="10dp"
                android:textColor="#FC915F5C"
                android:textColorHint="#48000000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/regPasswordField2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/auth_background1"
                android:hint="Repeat password"
                android:textStyle="bold"
                android:inputType="textPassword"
                android:lines="1"
                android:padding="10dp"
                android:textColor="#FC915F5C"
                android:textColorHint="#48000000"
                android:textSize="15sp" />

            <Button
                android:id="@+id/registrationButton"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/auth_background3"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="17sp" />

            <LinearLayout
                android:id="@+id/accountField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/already_have_an_account"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/logInTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3dp"
                    android:text="@string/log_in"
                    android:textColor="#EC99AA9A"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</FrameLayout>


